# cxx-kernel

./: CMakeLists.txt  LICENSE  Makefile  Makefile.arches  README.md  ata.cpp  ata.h  bits.cpp  bits.h  config.mk  config_arm.mk  config_linux.mk  config_x86.mk  cxa.cpp  cxa.h  fb.cpp  fb.h  font.cpp  font.h  gdt.cpp  gdt.h  generate-iso.sh  grub.cfg  idt.cpp  idt.h  idt_handlers.asm  kb.cpp  kb.h  kernel.cpp  kernel.h  kernel_version.h  link2.ld  link_arm.ld  link_armqemu.ld  link_x86.ld  list.cpp  list.h  loader.asm  local.cpp  local.h  (+36 more)
app/: CMakeLists.txt
app/hello/: hello.c
app/micropython/: fetch_micropython.sh  micropython-1.16-backspace.patch  micropython-1.16-musl-flush.patch  micropython-1.16-prelude.patch
app/python/: CMakeLists.txt  fetch_python.sh  pyconfig.h  python-3.4.2.patch  python.c
app/randomfile/: randomfile.c
app/readfile/: readfile.c
arch/: CMakeLists.txt  Makefile  atomic.h  atomic.hh  platform.cpp  platform.h  random.cpp
arch/arm/: Makefile  arm.cpp  armfb.h  cpuarm.h  gpio.cpp  gpio.h  idtarm.cpp  idtarm.h  loader.s  pagingarm.cpp  pagingarm.h  statesarm.cpp  statesarm.h  timerarm.cpp  timerarm.h  videoarm.cpp  videoarm.h
arch/arm/pi/: Makefile  armfb.cpp
arch/arm/qemu/: Makefile  armfb.cpp  armfb.h
arch/linux/: Makefile  acpilinux.cpp  cpulinux.h  idtlinux.cpp  idtlinux.h  loader.cpp  paginglinux.cpp  paginglinux.h  stateslinux.cpp  stateslinux.h  tasklinux.cpp  tasklinux.h  timerlinux.cpp  timerlinux.h  videolinux.cpp  videolinux.h  virtualdisc.cpp  virtualdisc.h  x11.cpp  x11.h
arch/x86/: Makefile  acpix86.cpp  atax86.cpp  atax86.h  bios.cpp  bios.h  bochs.cpp  bochs.h  cpux86.cpp  cpux86.h  gdt.asm  hwrandom.asm  idt_handlers.asm  idtx86.cpp  idtx86.h  kbx86.cpp  kbx86.h  loader.asm  memcpy.asm  memcpy.h  pages.asm  pagingx86.cpp  pagingx86.h  pci.cpp  pci.h  pcix86.cpp  pcix86.h  port.cpp  port.h  process.asm  randomx86.cpp  randomx86.h  realtimex86.cpp  realtimex86.h  regs.cpp  setjmp.asm  smp_init.asm  statesx86.cpp  statesx86.h  taskx86.cpp  (+10 more)
doc/: clothes.md
inc/: acpi.h  ata.h  ata.hh  bits.h  bus.h  cpu.h  cxa.h  fb.h  font.h  gdt.h  idt.h  kb.h  kernel.h  list.h  list.hh  local.h  math.h  memcopy.h  mm.h  multiboot.h  mutex.h  mutex.hh  operators.h  osmath.h  paging.h  pci.h  pci.hh  processmanager.h  pthread.hh  random.h  realtime.h  regs.h  scheduling.hh  setjmp.h  states.h  storage.h  storage.hh  string.h  string.hh  syscall.h  (+7 more)
inc/fs/: clothesfs.hh  devfs.hh  filesystem.hh  ustar.hh  vfs.hh
inc/kb/: layout.h  layout_fi.h  layout_us.h
libc/: CMakeLists.txt  assert.cpp  assert.h  errno.h  fcntl.cpp  fcntl.h  float.h  limits.h  locale.cpp  locale.h  osstdlib.cpp  osstdlib.h  pthread.cpp  pthread.h  signal.c  signal.h  stat.cpp  stdarg.h  stddef.h  stdio.cpp  stdio.h  string.cpp  string.h  syscall.cpp  syscall_arch.h  syscall_fileio.cpp  syscall_fileio.h  syscall_mem.cpp  syscall_mem.h  syscall_proc.cpp  syscall_proc.h  syscall_time.cpp  syscall_time.h  thread.cpp  time.cpp  time.h  unistd.cpp  unistd.h
libc/bits/: alltypes.h
libc/pthread/: pthread.cpp  pthread_cond.cpp  pthread_init.cpp  pthread_mutex.cpp  sem.cpp
libc/sys/: stat.h  timeb.h
src/: CMakeLists.txt  ata.cpp  bits.cpp  cxa.cpp  fb.cpp  font.cpp  gdt.cpp  idt.cpp  kb.cpp  kernel.cpp  layout.cpp  list.cpp  local.cpp  main.cpp  math.cpp  mm.cpp  mutex.cpp  operators.cpp  paging.cpp  pci.cpp  processmanager.cpp  random.cpp  setjmp.cpp  storage.cpp  string.cpp  syscall.cpp  task.cpp  timer.cpp  video.cpp  waitlist.cpp
src/fs/: clothesfs.cpp  devfs.cpp  filesystem.cpp  ustar.cpp  vfs.cpp
tests/: CMakeLists.txt  Makefile  config.h  test.h  test_list.cpp
